--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Upload new File</h1>
+    <h3>Upload your number photo</h1>
     <form method=post enctype=multipart/form-data>
-      <p><input type=file name=file>
-         <input type=submit value=Upload>
+        <p>
+        <p>
+        <p><input type=file name=file>
+        <p><input type=submit value=Upload>
     </form>
 
     <!-- Optional JavaScript -->
